--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     },
     "repository": "https://github.com/LambdaSchool/node-db1-project",
     "dependencies": {
+        "axios": "^0.19.2",
         "express": "^4.17.1",
         "knex": "^0.21.5",
         "pg": "^8.3.0",
+        "react-router-dom": "^5.2.0",
         "sqlite3": "^5.0.0"
     },
     "devDependencies": {
